--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.2",
+    "@sideway/address": "^5.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "abab": "^2.0.6",
     "axios": "^1.6.3",
     "bootstrap": "^5.3.2",
+    "domexception": "^4.0.0",
+    "har-validator": "^5.1.5",
+    "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
@@ -20,7 +25,10 @@
     "react-player": "^2.14.1",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
+    "request-promise-native": "^0.0.0",
+    "resolve-url": "^0.2.1",
+    "urix": "^0.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
