--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "domexception": "^4.0.0",
     "har-validator": "^5.1.5",
     "html-webpack-plugin": "^5.6.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
